--- a/index.html
+++ b/index.html
@@ -2,9 +2,59 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Stonington Fire Department</title>
+<title>Deer Isle Fire Department</title>
+<link type="image/png" rel="icon" href="img/favicon.png">
+<link type="text/css" rel="stylesheet" href="css/style.css">
+<link type="text/css" rel="stylesheet" href="css/navmenu.css">
 </head>
 <body>
-  Hello, World!
+<div id="page">
+<div id="banner">TO REPORT AN EMERGENCY: <b>DIAL 9-1-1</b></div>
+<div id="header">
+<img src="img/logo.svg" alt="SFD Logo" height="125">
+<div>
+<h1>Stonington Fire Department</h1>
+<h2>Proudly Serving The Citizens of Stonington, Maine</h2>
+</div>
+</div>
+<div class="NavMenu">
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="index.html#roster">Roster</a></li>
+    <li><a href="apparatus.html">Apparatus</a></li>
+    <li><a href="index.html#volunteer">Volunteer</a></li>
+    <li><a href="index.html#donate">Donate</a></li>
+    <li><a href="index.html#burn_permits">Burn&nbsp;Permits</a></li>
+</ul>
+</div>
+<div id="content">
+
+<h1 id="roster">Active Member Roster</h1>
+<table>
+    <tbody>
+        <tr><td>1</td><td>Steve Rittmeyer</td><td>Chief</td></tr>
+        <tr><td>10</td><td>Carl Shahan</td><td>Assistant Chief</td></tr>
+        <tr><td>21</td><td>Seth Reece</td><td>Captain</td></tr>
+        <tr><td>77</td><td>Mallary Reece</td><td>Treasurer/Secretary</td></tr>
+        <tr><td>6</td><td>Danny Oliver </td><td>Fire Police</td></tr>
+        <tr><td>75</td><td>Chris Shahan</td><td>Interior Firefighter</td></tr>
+        <tr><td>76</td><td>Ryan Hayward</td><td>Firefighter</td></tr>
+    </tbody>
+</table>
+
+<h1 id="volunteer">Volunteer</h1>
+
+<h1 id="donate">Donate</h1>
+
+<h1 id="burn_permits">Burn Permits</h1>
+
+</div> <!-- content -->
+
+</div> <!-- page -->
+
+<div id="footer">
+(c) 2023 Stonington Firefighter's Association All Rights Reserved.
+</div>
+</div>
 </body>
 </html>
