added content and fixed footer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Deer Isle Fire Department</title>
+<title>Stonington Fire Department</title>
 <link type="image/png" rel="icon" href="img/favicon.png">
 <link type="text/css" rel="stylesheet" href="css/style.css">
 <link type="text/css" rel="stylesheet" href="css/navmenu.css">
@@ -32,21 +32,32 @@
 <h1 id="roster">Active Member Roster</h1>
 <table>
     <tbody>
-        <tr><td>1</td><td>Steve Rittmeyer</td><td>Chief</td></tr>
+        <tr><td>01</td><td>Steve Rittmeyer</td><td>Chief</td></tr>
         <tr><td>10</td><td>Carl Shahan</td><td>Assistant Chief</td></tr>
         <tr><td>21</td><td>Seth Reece</td><td>Captain</td></tr>
         <tr><td>77</td><td>Mallary Reece</td><td>Treasurer/Secretary</td></tr>
-        <tr><td>6</td><td>Danny Oliver </td><td>Fire Police</td></tr>
+        <tr><td>06</td><td>Danny Oliver </td><td>Fire Police</td></tr>
         <tr><td>75</td><td>Chris Shahan</td><td>Interior Firefighter</td></tr>
         <tr><td>76</td><td>Ryan Hayward</td><td>Firefighter</td></tr>
     </tbody>
 </table>
 
 <h1 id="volunteer">Volunteer</h1>
+<p>If you are interested in volunteering, please contact the Stonington town office at 207-367-2351.</p>
 
 <h1 id="donate">Donate</h1>
+<p>If you would like to make a donation to the Fire Department, it would be gratefully accepted at:
+<br>
+<br>
+Stonington Fire Department
+<br>
+PO Box 472
+<br>
+Stonington, ME 04681
+</p>
 
 <h1 id="burn_permits">Burn Permits</h1>
+<p>You may request a burn permit online at <a href="http://www.maineburnpermit.com">http://www.maineburnpermit.com</a>
 
 </div> <!-- content -->
 
