fixed association name

--- a/apparatus.html
+++ b/apparatus.html
@@ -34,7 +34,7 @@
 </div> <!-- page -->
 
 <div id="footer">
-(c) 2023 Stonington Firefighter's Association All Rights Reserved.
+(c) 2023 Stonington Firefighters Association All Rights Reserved.
 </div>
 </div>
 </body>
