--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Stonington, ME 04681
 </div> <!-- page -->
 
 <div id="footer">
-(c) 2023 Stonington Firefighter's Association All Rights Reserved.
+(c) 2023 Stonington Firefighters Association All Rights Reserved.
 </div>
 </div>
 </body>
