--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         <tr><td>77</td><td>Mallary Reece</td><td>Treasurer/Secretary</td></tr>
         <tr><td>06</td><td>Danny Oliver </td><td>Fire Police</td></tr>
         <tr><td>75</td><td>Chris Shahan</td><td>Interior Firefighter</td></tr>
-        <tr><td>76</td><td>Ryan Hayward</td><td>Firefighter</td></tr>
+        <tr><td>325</td><td>Tyler Snow</td><td>Firefighter</td></tr>
+        <tr><td>78</td><td>Broc Eaton</td><td>Applicant</td></tr>
+        <tr><td>79</td><td>Evan Rainen</td><td>Applicant</td></tr>
+        <tr><td>80</td><td>Callie Shahan</td><td>Jr. Firefighter</td></tr>
     </tbody>
 </table>
 
