combined pump sections

--- a/apparatus.html
+++ b/apparatus.html
@@ -36,9 +36,8 @@
     <p>Engine: Navistar DT530</p>
     <p>Transmission: Allison MD3060P</p>
     <p>Model: Metalfab WAS14</p>
-    <p>Pump: 1250gpm</p>
     <p>Tank: 1400 gallon</p>
-    <p>Pump: Waterous CMYBX-1250</p>
+    <p>Pump: 1250gpm Waterous CMYBX-1250</p>
     <p>Controls: Midship</p>
     
     <h2>Photos:</h2>
