--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <tr><td>78</td><td>Broc Eaton</td><td>Firefighter</td></tr>
         <tr><td>79</td><td>Evan Rainen</td><td>Firefighter</td></tr>
         <tr><td>80</td><td>Callie Shahan</td><td>Jr. Firefighter</td></tr>
+        <tr><td>99</td><td>Jacob Shipman</td><td>Applicant</td></tr>
     </tbody>
 </table>
 
