--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <tr><td>06</td><td>Danny Oliver </td><td>Fire Police</td></tr>
         <tr><td>75</td><td>Chris Shahan</td><td>Interior Firefighter</td></tr>
         <tr><td>325</td><td>Tyler Snow</td><td>Interior Firefighter</td></tr>
+        <tr><td>99</td><td>Jacob Shipman</td><td>Interior Firefighter</td></tr>
         <tr><td>73</td><td>Chris Hovey</td><td>Firefighter</td></tr>
         <tr><td>78</td><td>Broc Eaton</td><td>Firefighter</td></tr>
         <tr><td>79</td><td>Evan Rainen</td><td>Firefighter</td></tr>
         <tr><td>80</td><td>Callie Shahan</td><td>Jr. Firefighter</td></tr>
-        <tr><td>99</td><td>Jacob Shipman</td><td>Applicant</td></tr>
     </tbody>
 </table>
 
