added T1 trans and axle specs

--- a/apparatus.html
+++ b/apparatus.html
@@ -66,7 +66,8 @@
     <p>Year: 1986</p>
     <p>Chasis: Ford F-8000</p>
     <p>Engine: Caterpiller 3208N V8</p>
-    <p>Transmission: 5+2 "Short Four"</p>
+    <p>Transmission: Dana-Spicer CM 5852-A 5+2 "Short Four"</p>
+    <p>Rear Axle: Eaton 23221</p>
     <p>Model: S&S Tank Co.</p>
     <p>Tank: 2000 gallon</p>
     <p>Pump: 750gpm W.S. Darley & Co.</p>
