added t1 shifting videos

--- a/apparatus.html
+++ b/apparatus.html
@@ -73,7 +73,10 @@
     <p>Pump: 750gpm W.S. Darley & Co.</p>
     
     <h2>Photos:</h2>
-    
+
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SVDSYSBvjgY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/osDi3hpovnc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 </div> <!-- content -->
 
 </div> <!-- page -->
