updated donation info with 501c3

--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
 <p>If you would like to make a donation to the Fire Department, it would be gratefully accepted at:
 <br>
 <br>
-Stonington Fire Department
+Stonington Firefighers Association
 <br>
 PO Box 472
 <br>
 Stonington, ME 04681
+<br>
+<br>
+We are a 501(c)(3) and your donations are tax deductable.
 </p>
 
 <h1 id="burn_permits">Burn Permits</h1>
