added link to application

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
 </table>
 
 <h1 id="volunteer">Volunteer</h1>
-<p>If you are interested in volunteering, please contact the Stonington town office at 207-367-2351.</p>
+<p>If you are interested in volunteering, please contact the Stonington town office at 207-367-2351.
+<br>
+<br>
+<a href="docs/application.pdf">Click here to download application</a>
+</p>
 
 <h1 id="donate">Donate</h1>
 <p>If you would like to make a donation to the Fire Department, it would be gratefully accepted at:
