fix spelling error

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ PO Box 472
 Stonington, ME 04681
 <br>
 <br>
-We are a 501(c)(3) and your donations are tax deductable.
+We are a 501(c)(3) and your donations are tax deductible.
 </p>
 
 <h1 id="burn_permits">Burn Permits</h1>
