added Travis Eaton

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <tr><td>75</td><td>Chris Shahan</td><td>Interior Firefighter</td></tr>
         <tr><td>325</td><td>Tyler Snow</td><td>Interior Firefighter</td></tr>
         <tr><td>99</td><td>Jacob Shipman</td><td>Interior Firefighter</td></tr>
+        <tr><td>72</td><td>Travis Eaton</td><td>Firefighter</td></tr>
         <tr><td>73</td><td>Chris Hovey</td><td>Firefighter</td></tr>
         <tr><td>78</td><td>Broc Eaton</td><td>Firefighter</td></tr>
         <tr><td>79</td><td>Evan Rainen</td><td>Firefighter</td></tr>
