added t to firefighters

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <p>If you would like to make a donation to the Fire Department, it would be gratefully accepted at:
 <br>
 <br>
-Stonington Firefighers Association
+Stonington Firefighters Association
 <br>
 PO Box 472
 <br>
