--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <div id="page">
 <div id="banner">TO REPORT AN EMERGENCY: <b>DIAL 9-1-1</b></div>
 <div id="header">
-<img src="img/logo.svg" alt="SFD Logo" height="125">
-<div>
-<h1>Stonington Fire Department</h1>
-<h2>Proudly Serving The Citizens of Stonington, Maine</h2>
-</div>
+    <img src="img/logo.svg" alt="SFD Logo" height="125">
+        <div>
+            <h1>Stonington Fire Department</h1>
+            <h2>Proudly Serving The Citizens of Stonington, Maine</h2>
+        </div>
 </div>
 <div class="NavMenu">
 <ul>
@@ -25,10 +25,12 @@
     <li><a href="index.html#volunteer">Volunteer</a></li>
     <li><a href="index.html#donate">Donate</a></li>
     <li><a href="index.html#burn_permits">Burn&nbsp;Permits</a></li>
+    <li><a href="https://facebook.com/stoningtonfd">Facebook</a></li>
 </ul>
+<a href="https://facebook.com/stoningtonfd"><img src="img/Facebook_Logo_Secondary.png" height="16"></a>
 </div>
 <div id="content">
-
+    
 <h1 id="roster">Active Member Roster</h1>
 <table>
     <tbody>
