--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@ PO Box 472
 Stonington, ME 04681
 <br>
 <br>
+<a href="https://venmo.com/stoningtonfd">Donate via Venmo</a>
+<br>
+<br>
 We are a 501(c)(3) and your donations are tax deductible.
 </p>
 
