--- a/apparatus.html
+++ b/apparatus.html
@@ -67,6 +67,9 @@
     <p>Chasis: Ford F-350 XL 4x4</p>
 
     <h2>Photos:</h2>
+    <img src="img/apparatus/u401.jpg" height="378"/>
+    <img src="img/apparatus/u402.jpg" height="378"/>
+    <img src="img/apparatus/u403.jpg" height="378"/>
     
     <h1 id="tanker_one">Tanker 1</h1>
     <h2>Stats:</h2>
