--- a/apparatus.html
+++ b/apparatus.html
@@ -25,6 +25,8 @@
         <li><a href="index.html#volunteer">Volunteer</a></li>
         <li><a href="index.html#donate">Donate</a></li>
         <li><a href="index.html#burn_permits">Burn&nbsp;Permits</a></li>
+        <li><a href="equipment.html">Equipment</a></li>
+        <li><a href="https://facebook.com/stoningtonfd">Facebook</a></li>
 </ul>
 </div>
 <div id="content">
