--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <li><a href="index.html#volunteer">Volunteer</a></li>
     <li><a href="index.html#donate">Donate</a></li>
     <li><a href="index.html#burn_permits">Burn&nbsp;Permits</a></li>
+    <li><a href="equipment.html">Equipment</a></li>
     <li><a href="https://facebook.com/stoningtonfd">Facebook</a></li>
 </ul>
 <a href="https://facebook.com/stoningtonfd"><img src="img/Facebook_Logo_Secondary.png" height="16"></a>
