added paypal donate button

--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@ PO Box 472
 Stonington, ME 04681
 <br>
 <br>
+Donate via PayPal:
+<br>
+<form action="https://www.paypal.com/donate" method="post" target="_top">
+<input type="hidden" name="hosted_button_id" value="WBH4AM9QV47KJ" />
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+</form>
+<br>
 <a href="https://venmo.com/stoningtonfd">Donate via Venmo</a>
 <br>
 <br>
