--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <tr><td>78</td><td>Broc Eaton</td><td>Firefighter</td></tr>
         <tr><td>79</td><td>Evan Rainen</td><td>Firefighter</td></tr>
         <tr><td>80</td><td>Callie Shahan</td><td>Jr. Firefighter</td></tr>
+        <tr><td>81</td><td>Coleman Brown</td><td>Firefighter</td></tr>
         <tr><td>82</td><td>Christy Shahan</td><td>Firefighter</td></tr>
     </tbody>
 </table>
