added rescue boat outboard manual

--- a/equipment.html
+++ b/equipment.html
@@ -53,6 +53,8 @@
     <h2>Chargers</h2>
     <a href="equipment/CBM612V4A.pdf">Tanker 1 Charger/Maintainer</a>
     
+    <h2>Rescue Boat</h2>
+    <a href="equipment/LIT-18626-14-77.pdf">Yamaha 9.9HP Outboard</a>
 
 
 </div> <!-- content -->
