boat link update

--- a/equipment.html
+++ b/equipment.html
@@ -54,7 +54,7 @@
     <a href="equipment/CBM612V4A.pdf">Tanker 1 Charger/Maintainer</a>
     
     <h2>Rescue Boat</h2>
-    <a href="equipment/WM_Owners_MANUAL_Revised May_10_2023.pdf">RIB 310 COMPACT AL HULL HYP</a>
+    <a href="equipment/WM_Owners_MANUAL_Revised May_10_2023.pdf">Rigid Inflatable Boat</a><br>
     <a href="equipment/LIT-18626-14-77.pdf">Yamaha 9.9HP Outboard</a>
 
 
